# TASK-req_c1db80ae06ac

./: .gitignore  metadata.json
.tmp/: audit_report-1-fix_check.md  audit_report-1.md  audit_report-2-fix_check.md  audit_report-2.md  test_coverage_and_readme_audit_report.md
docs/: api-spec.md  design.md  questions.md  test-coverage.md
repo/: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile.app  Dockerfile.tests  README.md  docker-compose.yml  init_db.sh  plan.md  run_app.sh  run_tests.sh
repo/crates/backend/: Cargo.toml
repo/crates/backend/migrations/: 0001_identity.sql  0002_rbac.sql  0003_ops_baseline.sql  0004_notifications.sql  0005_user_ext.sql  0006_reference.sql  0007_username.sql  0010_products.sql  0011_product_imports.sql  0012_product_extended.sql  0020_env.sql  0021_metrics.sql  0022_kpi_alerts_reports.sql  0023_metric_computation_quality.sql  0024_sku_on_shelf_compliance.sql  0030_talent.sql  0031_talent_extended.sql
repo/crates/backend/src/: app.rs  config.rs  db.rs  errors.rs  lib.rs  main.rs  seed.rs  spa.rs  state.rs  tls.rs
repo/crates/backend/src/alerts/: evaluator.rs  handlers.rs  mod.rs  rules.rs
repo/crates/backend/src/auth/: extractors.rs  mod.rs  password.rs  sessions.rs
repo/crates/backend/src/crypto/: argon.rs  email.rs  jwt.rs  keys.rs  mod.rs  signed_url.rs
repo/crates/backend/src/handlers/: auth.rs  mod.rs  monitoring.rs  notifications.rs  ref_data.rs  retention.rs  security.rs  system.rs  users.rs
repo/crates/backend/src/jobs/: mod.rs
repo/crates/backend/src/kpi/: handlers.rs  mod.rs  repo.rs
repo/crates/backend/src/metrics_env/: definitions.rs  formula.rs  handlers.rs  lineage.rs  mod.rs  sources.rs
repo/crates/backend/src/middleware/: authn.rs  budget.rs  csrf.rs  metrics.rs  mod.rs  request_id.rs
repo/crates/backend/src/models/: mod.rs  user.rs
repo/crates/backend/src/products/: export.rs  handlers.rs  history.rs  images.rs  import.rs  import_validator.rs  mod.rs  repo.rs  service.rs  tax_rates.rs
repo/crates/backend/src/reports/: cron.rs  csv.rs  handlers.rs  mod.rs  pdf.rs  scheduler.rs  xlsx.rs
repo/crates/backend/src/services/: audit.rs  mod.rs  notifications.rs  users.rs
repo/crates/backend/src/storage/: images.rs  mod.rs
repo/crates/backend/src/talent/: candidates.rs  feedback.rs  handlers.rs  mod.rs  roles_open.rs  scoring.rs  search.rs  watchlists.rs  weights.rs
repo/crates/backend/tests/: audit9_bundle_tests.rs  budget_tests.rs  csrf_tests.rs  deep_admin_surface_tests.rs  deep_alerts_reports_tests.rs  deep_jobs_scheduler_tests.rs  deep_metrics_kpi_tests.rs  deep_products_tests.rs  http_p1.rs  integration_tests.rs  mtls_handshake_tests.rs  parity_success_tests.rs  parity_tests.rs  talent_feedback_tests.rs  talent_recommend_tests.rs  talent_search_tests.rs  talent_watchlist_tests.rs  talent_weights_tests.rs
repo/crates/backend/tests/common/: mod.rs
repo/crates/frontend/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
repo/crates/frontend/dist-scaffold/: index.html  tailwind.css
repo/crates/frontend/src/: api.rs  app.rs  components.rs  gate2_tests.rs  main.rs  pages.rs  router.rs  state.rs
repo/crates/frontend/static/: sw.js  tailwind.css
repo/crates/shared/: Cargo.toml
repo/crates/shared/src/: error.rs  lib.rs  pagination.rs  permissions.rs  roles.rs  time.rs  tristate.rs
repo/crates/shared/src/dto/: alert.rs  audit.rs  auth.rs  env_source.rs  health.rs  import.rs  kpi.rs  metric.rs  mod.rs  monitoring.rs  notification.rs  product.rs  ref_data.rs  report.rs  retention.rs  security.rs  talent.rs  user.rs
repo/docs/: api-spec.md  design.md  test-coverage.md
repo/e2e/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
repo/e2e/specs/: admin_ops.spec.ts  alert_to_notification.spec.ts  analyst_metric_report.spec.ts  login.spec.ts  offline_states.spec.ts  products_import.spec.ts  talent_recommendations.spec.ts
repo/scripts/: audit_endpoints.sh  dev_bootstrap.sh  frontend_verify.sh  gen_tls_certs.sh  issue_device_cert.sh  seed_demo.sh
