[package]
name = "terraops-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "terraops-backend"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[features]
# Enables in-memory `RuntimeKeys::for_testing()` + other test-only helpers
# so the HTTP integration suite in `tests/` can spin up the app without
# touching the filesystem.
test-utils = []

[dependencies]
terraops-shared = { path = "../shared" }

actix-web = { version = "4", features = ["rustls-0_22"] }
actix-files = "0.6"
actix-rt = "2"
actix-service = "2"

tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
futures-util = "0.3"

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
    "macros",
    "uuid",
    "chrono",
    "json",
    "ipnetwork",
] }
ipnetwork = "0.20"

rustls = "0.22"
rustls-pemfile = "2"

anyhow = "1"
clap = { version = "4", features = ["derive"] }

argon2 = { version = "0.5", features = ["std"] }
password-hash = "0.5"
jsonwebtoken = "9"
aes-gcm = { version = "0.10", features = ["std"] }
hmac = "0.12"
sha2 = "0.10"
rand = { version = "0.8", features = ["std_rng"] }
base64 = "0.22"
hex = "0.4"
subtle = "2"

validator = { version = "0.18", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
once_cell = "1"
