[package]
name = "terraops-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "terraops-frontend"
path = "src/main.rs"

[dependencies]
terraops-shared = { path = "../shared" }

yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window", "Document", "Storage", "Location",
    "HtmlInputElement", "HtmlSelectElement", "HtmlTextAreaElement",
    "HtmlFormElement", "HtmlAnchorElement",
    "Event", "SubmitEvent", "InputEvent", "MouseEvent",
    "Blob", "BlobPropertyBag", "Url",
    "console",
] }

gloo-net = { version = "0.5", features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-storage = "0.3"

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
uuid = { version = "1", default-features = false, features = ["serde", "v4", "js"] }
futures = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
